@@ -7,6 +7,7 @@ Next version:
 
 * add support for PDF documents encrypted with Acrobat X
 * “Print as image” compatibility option for documents that fail to print properly
+* -manga-mode [1|true|0|false] for proper display of manga comic books
 * fix multiple crashes caused by overflows
 
 2.1.1 (2012-05-07)
